# Myriad

./: .gitignore  README.md  config.toml  ef_data.csv  pack.bat  pyproject.toml
src/chat/: __init__.py  chatgpt_session.py
src/gui/: __init__.py  load_toml.py  main_page.py
src/gui/views/: __init__.py  about_frame.py  chat_frame.py  pred_frame.py  search_frame.py
src/hyper_parameters/: __init__.py
src/lstm_model/: __init__.py  draw.py  lstm_model.py  lstm_module.py  pl_lstm.py  train.py
src/myriad/: __init__.py  main.py
src/pred/: __init__.py  get_data.py
