[project]
name = "myriad"
version = "0.1.0"
description = "一个金融股票预测助手"
dependencies = [
    "numpy>=1.26.4",
    "tqdm>=4.66.4",
    "baostock>=0.8.9",
    "efinance>=0.5.2",
    "scikit-learn>=1.5.0",
    "wandb>=0.17.1",
    "tensorboard>=2.17.0",
    "torch==2.3.1+cu121",
    "lightning[extra]>=2.2.5",
    "chinese_calendar>=1.9.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "lxml>=5.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/myriad"]
