[project]
name = "myriad"
version = "0.1.0"
description = "一个金融股票预测助手"
dependencies = [
    "torch==2.3.1+cpu",
    "numpy>=1.26.3",
    "tqdm>=4.64.1",
    "baostock>=0.8.9",
    "efinance>=0.5.2",
    "scikit-learn>=1.5.0",
    "wandb>=0.17.1",
    "tensorboard>=2.17.0",
    "lightning[extra]>=2.3.0",
    "chinese-calendar>=1.9.1",
    "openai>=1.34.0",
    "toml>=0.10.2",
    "pyinstaller>=6.8.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "lxml>=5.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/myriad"]
